@@ -36,7 +36,8 @@ OVERALL TODO
    Add git tag r-1 when switching
    
 * v0.0.5-253 (04 Nov. 2016 - ???) SLOC ?,??? FT ???:?? UT ?
-- (9) Fully handle GameEngine reconfiguration
+- Handle F11/screenshot keybinding
+- Fully handle GameEngine reconfiguration
 - Start to handle Ogre3D reconfiguration
 - StateSaver start to save/restore complex types
 - Start StateSaver implementation
